[release-later] Improve functional tests